--- a/src/styles/components/_filter.scss
+++ b/src/styles/components/_filter.scss
@@ -1,6 +1,7 @@
 .filter {
 	position: fixed;
-	bottom: 50px;
+	//bottom: 50px;
+	top: 10px;
 	left: 50%;
 	transform: translateX(-50%);
 	border-radius: 10px;
