--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,11 +7,14 @@
 @import "utilities/_functions";
 @import "utilities/__root";
 @import "utilities/_helper";
+@import "components/_btn";
 @import "components/_base";
 @import "components/_nav";
 @import "components/_listing";
 @import "components/_details";
 @import "components/_filter";
+@import "components/_compare-bar";
+@import "components/_compare-site";
 
 /* @import "src/styles/utilities/_functions.scss";
 @import "src/styles/utilities/__root.scss";
